$Id$

2015-05-02  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print Transport Type for PATA and PCIe.
	Print diagnostic values if SATA version or speed is unknown.
	smartctl.8.in, smartd.8.in: Add Volker Kuhlmann to AUTHORS section.

2015-05-01  Christian Franke  <franke@computer.org>

	ataidentify.cpp: ACS-3/4 updates.
	ataprint.cpp: Add recent ACS-3/4 minor revisions.
	Add ACS-4 log 0x0f.  Add ACS-4 device statistics values and
	vendor specific statistics page.

2015-04-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix possible loss of user PATH environment
	variable with length greater than NSIS max string length.

2015-04-26  Christian Franke  <franke@computer.org>

	do_release: New Signing Key.
	Makefile.am: Use make variables instead of autoconf variables
	if possible.

2015-04-24  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in: Rework AUTHORS section.
	INSTALL, Makefile.am, os_win32/installer.nsi:
	Remove WARNINGS file.
	WARNINGS: Remove this file.

2015-04-23  Christian Franke  <franke@computer.org>

	configure.ac: Add '--with-systemdenvfile=auto' option as new default.
	Remove no longer needed ENABLE_CAPABILITIES conditional.
	Makefile.am: Silence build of smartd.service file.
	Integrate all ENABLE_* conditionals in MAN_FILTER script.

2015-04-21  Christian Franke  <franke@computer.org>

	configure.ac: Print 'deprecated' warning for '--disable-drivedb',
	'--enable-savestates', '--enable-attributelog' options.
	Add 'yes|no' support to corresponding '--with-...' options.

2015-04-19  Christian Franke  <franke@computer.org>

	AUTHORS: Remove smartmontools-support list address.
	Remove defunct mail addresses.  Update smartsuite info.
	Add recent contributors.
	README: Refer to AUTHORS.

2015-04-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add SAT autodetection based on vendor string from
	IOCTL_STORAGE_QUERY_PROPERTY.
	smartd.cpp: If SMART ENABLE command failed, continue if SMART is